deploy/kustomize/overlays/testing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: threadmem-ingress
  annotations:
    ingressClassName: "gce"
    networking.gke.io/managed-certificates: threadmem-cert
    kubernetes.io/ingress.global-static-ip-name: threadmem-testing
spec:
  rules:
    - host: api.hub.testing.agentlabs.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: threadmem-service
                port:
                  number: 80
